config/manager/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-spread-system
  labels:
    app.kubernetes.io/part-of: service-spread-scheduler
